--- a/lib/uartLib/CMakeLists.txt
+++ b/lib/uartLib/CMakeLists.txt
@@ -5,12 +5,24 @@ if(NOT UART_HW_CONFIG_FILE)
     message(FATAL_ERROR "please set UART_HW_CONFIG_FILE - fullpath to uart config file")
 endif ()
 
+if(NOT STM32_STARTUP_FILE)
+    message(FATAL_ERROR "please set STM32_STARTUP_FILE - fullpath to startup file of STM32")
+endif ()
+
+if(NOT LINKER_SCRIPT)
+    message(FATAL_ERROR "please set LINKER_SCRIPT - fullpath to LINKER_SCRIPT file of STM32")
+endif ()
+
+
 # Setup aviaradar as lib
 file(GLOB_RECURSE UART_HW_SOURCES
-    "src/*.*"
+        "src/*.*"
 )
 
-add_library(uart_hw_hal_lib STATIC ${UART_HW_SOURCES})
+
+
+add_library(uart_hw_hal_lib STATIC ${UART_HW_SOURCES} )
+
 target_compile_definitions(uart_hw_hal_lib PUBLIC UART_APP_CONFIG="${UART_HW_CONFIG_FILE}")
 target_include_directories(uart_hw_hal_lib
 
