--- a/lib/uartLib/CMakeLists.txt
+++ b/lib/uartLib/CMakeLists.txt
@@ -5,6 +5,14 @@ if(NOT UART_HW_CONFIG_FILE)
     message(FATAL_ERROR "please set UART_HW_CONFIG_FILE - fullpath to uart config file")
 endif ()
 
+if(NOT STM32_STARTUP_FILE)
+    message(FATAL_ERROR "please set STM32_STARTUP_FILE - fullpath to startupfile of MCU")
+endif ()
+
+if(NOT HAL_CONFIG_FILE_DIR)
+    message(FATAL_ERROR "please set HAL_CONFIG_FILE_DIR - path to HAL_CONFIG_FILE for STM32_HAL_Driver")
+endif ()
+
 # Setup aviaradar as lib
 file(GLOB_RECURSE UART_HW_SOURCES
         "src/*.*"
@@ -14,15 +22,15 @@ file(GLOB_RECURSE UART_HW_SOURCES
 
 add_definitions(-DUSE_HAL_DRIVER -DSTM32H523xx)
 add_library(startup STATIC ${STM32_STARTUP_FILE})
-add_library(uart_hw_hal_lib STATIC ${UART_HW_SOURCES} )
+add_library(uartLib STATIC ${UART_HW_SOURCES} )
 
-target_compile_definitions(uart_hw_hal_lib PUBLIC UART_APP_CONFIG="${UART_HW_CONFIG_FILE}")
-target_include_directories(uart_hw_hal_lib
+target_compile_definitions(uartLib PUBLIC UART_APP_CONFIG="${UART_HW_CONFIG_FILE}")
+target_include_directories(uartLib
 
         PRIVATE  src ${HAL_DRIVERS}/Inc
         PUBLIC src/user_layer ${HAL_CONFIG_FILE_DIR}
 )
 
 
-target_link_libraries(uart_hw_hal_lib PUBLIC STM32_Drivers
+target_link_libraries(uartLib PUBLIC STM32_Drivers
        )
